add rainbow border to text

--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                 <div class="three-1">
                     <img class="vw" src="./images/tumblr_pla7rlVZOz1y3ryiio1_250.webp" alt="">
                     <img class="bw"src="./images/Paolo_Monti_-_Servizio_fotografico_(Napoli,_1969)_-_BEIC_6353768.jpg" alt="">
-                    <p> <span>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores </span> </p>
+                    <div class="glow">
+                        <p> Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores </p>
+                    </div>
                 </div>
                 
                 <div class="three-2">
