add disrupt sign

--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                     <img src="./images/2g3rgc6.jpg" alt="">
                 </div>
 
+                <div class="three-3">
+                    <h1>DISRUPT</h1>
+                </div>
+
 
             </div>
             <div class="four">
