add minor changes

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="three-3">
-                    <h1>DISRUPT</h1>
+                    <h1>DISRUPT<br>DISRUPT<br>DISRUPT</h1>
                 </div>
 
 
