--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
             </div>
         </div>
 
+        <div class="footer">
+            <p class="text">BRUTALISM </p>
+            <div class="id">
+                <p class="at">@</p>
+                <p class="at-id">LordAdhaar</p>
+            </div>
+        </div>
+
 
     </div>
     
